--- a/CSS/index.css
+++ b/CSS/index.css
@@ -118,6 +118,40 @@ nav {
   letter-spacing: 0.02em;
 }
 
+.link-s {
+  color: var(--accent-color);
+  position: relative;
+  display: block;
+}
+
+.link-s::after {
+  bottom: -29px;
+  left: 0;
+  content: "";
+  width: 68%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+}
+
+.link-p {
+  color: var(--accent-color);
+  position: relative;
+  display: block;
+}
+
+.link-p::after {
+  bottom: -28px;
+  left: 0;
+  content: "";
+  width: 80%;
+  height: 4px;
+  background: var(--accent-color);
+  border-radius: 2px;
+  position: absolute;
+}
+
 .link-telephone {
   color: var(--primary-category-color);
   font-family: Roboto;
@@ -160,21 +194,120 @@ nav {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
   text-align: center;
-
+  cursor: pointer;
+  border-style: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   padding: 10px 32px 10px 32px;
   text-decoration: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+button,
+select {
+  text-transform: none;
+  border-style: none;
+}
+
 .button-wrap {
   text-align: center;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 581px;
+  width: 528px;
+  padding: 15px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
+.modal-button {
+  display: inline-flex;
+  position: absolute;
+  content: "";
+  background-color: var(--primary-white-color);
+  background-image: url(../Images/close.svg);
+  background-size: 11px;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  right: 8px;
+  top: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  fill: currentColor;
+
+  transform: rotateY(0);
+  transition: transform 500ms linear;
+}
+
+.modal-button:hover {
+  background-color: var(--accent-color);
+  transform: rotate(360deg);
+  background-image: url(../images/close.svg);
+}
+
 .whatwedo {
   margin: auto;
   width: 1200px;
 }
 .whatwedo li {
   list-style: none;
+}
+
+.img-overlay {
+  position: relative;
+}
+
+.overlay-text {
+  width: 100%;
+  background: rgba(47, 48, 58, 0.8);
+  height: 70px;
+  position: absolute;
+  padding-top: 27px;
+  left: 0;
+  bottom: 4px;
+  margin: 0;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.1em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 
 .feature {
@@ -642,11 +775,14 @@ footer {
   border-color: #f5f4fa;
   text-align: center;
   border-color: transparent;
+  transition-duration: 500ms;
+  transition-timing-function: linear;
 }
 
 .button.secondary:hover {
   background-color: var(--accent-color);
   border-color: var(--accent-color);
+  color: var(--primary-white-color);
 }
 
 .button {
@@ -737,4 +873,60 @@ ul {
 }
 .portfolio-bottom {
   width: auto;
+}
+
+.portfolio-card {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-thumb::before {
+  display: inline-block;
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-action {
+  opacity: 0;
+  font-style: normal;
+  font-weight: normal;
+  color: var(--primary-white-color);
+
+  font-size: 18px;
+  line-height: 1.5em;
+  letter-spacing: 0.03em;
+
+  position: absolute;
+  display: block;
+  right: 0;
+  top: 0;
+  padding: 63px 24px;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-thumb:hover::before {
+  opacity: 1;
+}
+
+.portfolio-card:hover .card-action,
+.portfolio-card:hover .card-thumb::before {
+  opacity: 1;
+  transform: translateY(0);
 }
